更新 IoTCore 和 IoTEdge 项目中的包版本
在 `IoTCore.csproj` 文件中：
- 移除了 `Models\UpgradeInfo.cs` 文件的编译。
- 将 `DH.NIoT` 包的版本从 `3.7.2024.819-beta06380001` 更新到 `3.7.2024.820-beta0922`。

在 `IoTEdge.csproj` 文件中：
- 将 `DH.NBACnet` 包的版本从 `3.7.2024.820-beta0845` 更新到 `3.7.2024.821-beta0211`。
- 将 `DH.NMQTT` 包的版本从 `3.7.2024.820` 更新到 `3.7.2024.821-beta0256`。
- 将 `DH.NNetPing` 包的版本从 `3.7.2024.819-beta0912` 更新到 `3.7.2024.821-beta0258`。
- 将 `DH.NPC` 包的版本从 `3.7.2024.819-beta0724` 更新到 `3.7.2024.821-beta0303`。
- 将 `DH.NSchneider` 包的版本从 `3.7.2024.819-beta1123` 更新到 `3.7.2024.821-beta1107`。
- 将 `DH.NSiemens` 包的版本从 `3.7.2024.819-beta1041` 更新到 `3.7.2024.821-beta1125`。

--- a/IoTCore/IoTCore.csproj
+++ b/IoTCore/IoTCore.csproj
@@ -4,8 +4,8 @@
     <TargetFrameworks>netstandard2.1;netstandard2.0;net461</TargetFrameworks>
     <AssemblyTitle>新生命IoT核心库</AssemblyTitle>
     <Description>IoT框架基础类库</Description>
-    <Company>新生命开发团队</Company>
-    <Copyright>©2002-2024 NewLife</Copyright>
+    <Company>湖北登灏科技有限公司</Company>
+    <Copyright>©2020-2024 湖北登灏科技有限公司</Copyright>
     <VersionPrefix>2.0</VersionPrefix>
     <VersionSuffix>$([System.DateTime]::Now.ToString(`yyyy.MMdd`))</VersionSuffix>
     <Version>$(VersionPrefix).$(VersionSuffix)</Version>
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DH.NIoT" Version="3.7.2024.819-beta06380001" />
+    <PackageReference Include="DH.NIoT" Version="3.7.2024.820-beta0922" />
     <PackageReference Include="DH.NRemoting" Version="3.7.2024.820" />
   </ItemGroup>
 
