--- a/IoTZero/IoTZero.csproj
+++ b/IoTZero/IoTZero.csproj
@@ -4,8 +4,8 @@
     <TargetFramework>net8.0</TargetFramework>
     <AssemblyTitle>物联网服务平台</AssemblyTitle>
     <Description>IoT服务平台</Description>
-    <Company>新生命开发团队</Company>
-    <Copyright>©2002-2024 NewLife</Copyright>
+    <Company>湖北登灏科技有限公司</Company>
+    <Copyright>©2020-2024 湖北登灏科技有限公司</Copyright>
     <VersionPrefix>2.0</VersionPrefix>
     <VersionSuffix>$([System.DateTime]::Now.ToString(`yyyy.MMdd`))</VersionSuffix>
     <Version>$(VersionPrefix).$(VersionSuffix)</Version>
@@ -29,12 +29,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="NewLife.Cube.Core" Version="6.1.2024.403" />
-    <PackageReference Include="NewLife.IoT" Version="2.2.2024.501" />
-    <PackageReference Include="NewLife.MQTT" Version="2.0.2024.516" />
-    <PackageReference Include="NewLife.Redis" Version="5.7.2024.602" />
-    <PackageReference Include="NewLife.Remoting.Extensions" Version="3.0.2024.620-beta1407" />
-    <PackageReference Include="NewLife.Stardust.Extensions" Version="2.9.2024.402" />
+    <PackageReference Include="DH.NCube.Core" Version="3.7.2024.821-beta0134" />
+    <PackageReference Include="DH.NIoT" Version="3.7.2024.820-beta0922" />
+    <PackageReference Include="DH.NMQTT" Version="3.7.2024.821-beta0256" />
+    <PackageReference Include="DH.NRedis" Version="3.7.2024.821-beta0308" />
+    <PackageReference Include="DH.NRemoting.Extensions" Version="3.7.2024.820" />
+    <PackageReference Include="DH.NStardust.Extensions" Version="3.7.2024.820" />
   </ItemGroup>
 
   <ItemGroup>
