--- a/IoTZero/IoTZero.csproj
+++ b/IoTZero/IoTZero.csproj
@@ -29,7 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DH.NCube.Core" Version="3.7.2024.821-beta0134" />
+    <PackageReference Include="DH.NCube.Core" Version="3.7.2024.822" />
     <PackageReference Include="DH.NIoT" Version="3.7.2024.820-beta0922" />
     <PackageReference Include="DH.NMQTT" Version="3.7.2024.821-beta0256" />
     <PackageReference Include="DH.NRedis" Version="3.7.2024.821-beta0308" />
