更新多个项目的包版本并移除无用文件
更新了 `IoT.Data.csproj` 中的 `DH.NCode` 包版本。
在 `IoTCore.csproj` 中移除了 `Models\UpgradeInfo.cs` 文件的编译，并更新了 `DH.NIoT` 和 `DH.NRemoting` 包版本。
在 `IoTEdge.csproj` 中更新了多个包的版本，包括 `DH.NBACnet`、`DH.NModbus`、`DH.NModbusRTU`、`DH.NMQTT`、`DH.NNetPing`、`DH.NPC`、`DH.NSchneider`、`DH.NSiemens` 和 `DH.NStardust`。
在 `IoTZero.csproj` 中更新了多个包的版本，包括 `DH.NCube.Core`、`DH.NIoT`、`DH.NMQTT`、`DH.NRedis`、`DH.NRemoting.Extensions` 和 `DH.NStardust.Extensions`。

--- a/IoTCore/IoTCore.csproj
+++ b/IoTCore/IoTCore.csproj
@@ -23,8 +23,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DH.NIoT" Version="3.7.2024.820-beta0922" />
-    <PackageReference Include="DH.NRemoting" Version="3.7.2024.820" />
+    <PackageReference Include="DH.NIoT" Version="3.7.2024.826-beta0604" />
+    <PackageReference Include="DH.NRemoting" Version="3.7.2024.826-beta0156" />
   </ItemGroup>
 
 </Project>
