--- a/IoTZero/IoTZero.csproj
+++ b/IoTZero/IoTZero.csproj
@@ -29,12 +29,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DH.NCube.Core" Version="3.7.2024.822" />
-    <PackageReference Include="DH.NIoT" Version="3.7.2024.820-beta0922" />
-    <PackageReference Include="DH.NMQTT" Version="3.7.2024.821-beta0256" />
-    <PackageReference Include="DH.NRedis" Version="3.7.2024.821-beta0308" />
-    <PackageReference Include="DH.NRemoting.Extensions" Version="3.7.2024.820" />
-    <PackageReference Include="DH.NStardust.Extensions" Version="3.7.2024.820" />
+    <PackageReference Include="DH.NCube.Core" Version="3.7.2024.826-beta0428" />
+    <PackageReference Include="DH.NIoT" Version="3.7.2024.826-beta0604" />
+    <PackageReference Include="DH.NMQTT" Version="3.7.2024.826-beta0621" />
+    <PackageReference Include="DH.NRedis" Version="3.7.2024.826-beta0225" />
+    <PackageReference Include="DH.NRemoting.Extensions" Version="3.7.2024.826-beta0156" />
+    <PackageReference Include="DH.NStardust.Extensions" Version="3.7.2024.826-beta0214" />
   </ItemGroup>
 
   <ItemGroup>
