更新多个项目的包版本并移除无用文件
在 `IoT.Data.csproj` 文件中：
- 更新 `DH.NCode` 包版本至 `3.91.2024.1008-beta0824`。

在 `IoTCore.csproj` 文件中：
- 移除 `Models\UpgradeInfo.cs` 文件的编译。
- 更新 `DH.NIoT` 包版本至 `3.91.2024.1008-beta0833`。
- 更新 `DH.NRemoting` 包版本至 `3.91.2024.1008-beta0825`。

在 `IoTEdge.csproj` 文件中：
- 更新多个包版本：
  - `DH.NBACnet` 至 `3.91.2024.1008-beta0356`。
  - `DH.NModbus` 至 `3.91.2024.1008-beta0845`。
  - `DH.NModbusRTU` 至 `3.91.2024.1008-beta0845`。
  - `DH.NMQTT` 至 `3.91.2024.1008-beta0856`。
  - `DH.NNetPing` 至 `3.91.2024.1008-beta0857`。
  - `DH.NPC` 至 `3.91.2024.1008-beta0918`。
  - `DH.NSchneider` 至 `3.9.2024.9210003`。
  - `DH.NSiemens` 至 `3.9.2024.9210003`。
  - `DH.NSmartA2` 至 `1.1.2024.1008-beta0929`。
  - `DH.NSmartA4` 至 `1.0.2024.920-beta0202`。
  - `DH.NStardust` 至 `3.91.2024.1008-beta0339`。

在 `IoTZero.csproj` 文件中：
- 更新多个包版本：
  - `DH.NCube.Core` 至 `3.91.2024.1008-beta0726`。
  - `DH.NIoT` 至 `3.91.2024.1008-beta0833`。
  - `DH.NMQTT` 至 `3.91.2024.1008-beta0856`。
  - `DH.NRedis` 至 `3.91.2024.1008-beta0919`。
  - `DH.NRemoting.Extensions` 至 `3.91.2024.1008-beta0825`。
  - `DH.NStardust.Extensions` 至 `3.91.2024.1008-beta0339`。

--- a/IoTEdge/IoTEdge.csproj
+++ b/IoTEdge/IoTEdge.csproj
@@ -20,17 +20,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DH.NBACnet" Version="3.7.2024.918-beta1016" />
-    <PackageReference Include="DH.NModbus" Version="3.7.2024.920-beta0149" />
-    <PackageReference Include="DH.NModbusRTU" Version="3.7.2024.920-beta0149" />
-    <PackageReference Include="DH.NMQTT" Version="3.7.2024.920-beta0134" />
-    <PackageReference Include="DH.NNetPing" Version="3.7.2024.920-beta0151" />
-    <PackageReference Include="DH.NPC" Version="3.7.2024.920-beta0158" />
-    <PackageReference Include="DH.NSchneider" Version="3.7.2024.920-beta0158" />
-    <PackageReference Include="DH.NSiemens" Version="3.7.2024.920-beta0159" />
-    <PackageReference Include="DH.NSmartA2" Version="1.1.2024.912-beta0152" />
-    <PackageReference Include="DH.NSmartA4" Version="1.0.2024.918-beta1207" />
-    <PackageReference Include="DH.NStardust" Version="3.7.2024.918-beta0838" />
+    <PackageReference Include="DH.NBACnet" Version="3.91.2024.1008-beta0356" />
+    <PackageReference Include="DH.NModbus" Version="3.91.2024.1008-beta0845" />
+    <PackageReference Include="DH.NModbusRTU" Version="3.91.2024.1008-beta0845" />
+    <PackageReference Include="DH.NMQTT" Version="3.91.2024.1008-beta0856" />
+    <PackageReference Include="DH.NNetPing" Version="3.91.2024.1008-beta0857" />
+    <PackageReference Include="DH.NPC" Version="3.91.2024.1008-beta0918" />
+    <PackageReference Include="DH.NSchneider" Version="3.9.2024.9210003" />
+    <PackageReference Include="DH.NSiemens" Version="3.9.2024.9210003" />
+    <PackageReference Include="DH.NSmartA2" Version="1.1.2024.1008-beta0929" />
+    <PackageReference Include="DH.NSmartA4" Version="1.0.2024.920-beta0202" />
+    <PackageReference Include="DH.NStardust" Version="3.91.2024.1008-beta0339" />
   </ItemGroup>
 
   <ItemGroup>
